chore: clean up code (#166)
Co-authored-by: Myst <1592048+LeMyst@users.noreply.github.com>